[package]
name = "iot2db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["indexmap"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.28"
async-trait = "0.1.72"
reqwest = { version = "0.11.18", features = ["json"] }
tokio-postgres = "0.7.8"
postgres-protocol = "0.6.5"
#rebo = { path = "../rebo/rebo" }
rebo = { git = "https://github.com/oberien/rebo", rev = "4595526e4dd9b6f3ede6b9964446163edc1fa9a7" }
rumqttc = "0.24.0"
indexmap = "1.9.3"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
once_cell = "1.17.2"
regex = "1.8.3"
shlex = "1.3.0"
genawaiter = "0.99.1"
systemd = "0.10.0"
